<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/search_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_search_text_view"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyword_hint"
            android:id="@+id/booksearch_keyword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_hint"
            android:id="@+id/booksearch_author" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/booksearch_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/booksearch_searchResultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>